[gd_scene load_steps=6 format=2]

[ext_resource path="res://Code/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Assets/Images/GUI/Buttons/Inactive/resume_button_i.png" type="Texture" id=2]
[ext_resource path="res://Assets/Images/GUI/Buttons/Active/resume_button_a.png" type="Texture" id=3]
[ext_resource path="res://Assets/Images/GUI/Buttons/Hover/resume_button_h.png" type="Texture" id=4]

[sub_resource type="Theme" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.0
margin_top = -22.0
margin_right = 41.0
margin_bottom = 22.0
rect_scale = Vector2( 3, 3 )
theme = SubResource( 1 )
custom_constants/separation = 4

[node name="NewGame" type="TextureButton" parent="VBoxContainer"]
margin_right = 82.0
margin_bottom = 18.0
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 3 )
texture_hover = ExtResource( 4 )

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 22.0
margin_right = 82.0
margin_bottom = 42.0
text = "Quit"

[connection signal="pressed" from="VBoxContainer/NewGame" to="." method="_on_New_Game_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
